--- a/amqbroker_5_7/Dockerfile
+++ b/amqbroker_5_7/Dockerfile
@@ -2,7 +2,7 @@ FROM java:8-jre
 
 ENV ACTIVEMQ_VERSION 5.7.0
 ENV ACTIVEMQ apache-activemq-$ACTIVEMQ_VERSION
-ENV ACTIVEMQ_TCP=61616 ACTIVEMQ_HTTP=8989
+ENV ACTIVEMQ_TCP=61616 ACTIVEMQ_HTTP=8989 ACTIVEMQ_WS=61614
 
 ENV ACTIVEMQ_HOME /opt/activemq
 
@@ -20,6 +20,6 @@ USER activemq
 COPY activemq.xml /opt/activemq/conf/activemq.xml
 
 WORKDIR $ACTIVEMQ_HOME
-EXPOSE $ACTIVEMQ_TCP $ACTIVEMQ_HTTP
+EXPOSE $ACTIVEMQ_TCP $ACTIVEMQ_HTTP $ACTIVEMQ_WS
 
 CMD ["/bin/bash", "-c", "bin/activemq console"]
