--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ db:
   image: mysql
   environment:
     - MYSQL_ROOT_PASSWORD=password
+  ports:
+    - 3306:3306
 web:
   build: .
   ports:
@@ -14,12 +16,14 @@ web:
   links:
     - db
   # uncomment the 'volumes' section to enable a shared volume with docker-compose
-  # volumes:
-  #   - /local/data/dir:/data:rw
+  volumes:
+    - ./data:/data:rw
   environment:
-    - MEDIAWIKI_SITE_SERVER=//my-wiki
+    - MEDIAWIKI_SITE_SERVER=//35.167.88.243
     - MEDIAWIKI_SITE_NAME=My Awesome Wiki
     - MEDIAWIKI_DB_PASSWORD=password
 
     # uncomment 'MEDIAWIKI_ENABLE_SSL' to enable SSL support
     # - MEDIAWIKI_ENABLE_SSL=true
+    - MEDIAWIKI_UPDATE=true
+    - ENABLE_SMW=true
