--- a/apache/mediawiki.conf
+++ b/apache/mediawiki.conf
@@ -5,6 +5,9 @@ LimitRequestBody 220200960
 # Support for SSL, redirect HTTP to HTTPS and place in SSL stuff.
 <IfModule ssl_module>
   <VirtualHost *:80>
+    ServerName modeldr.co.uk
+    ErrorLog ${APACHE_LOG_DIR}/modeldr.co.uk.error.log
+    CustomLog ${APACHE_LOG_DIR}/modeldr.co.uk.access.log combined
     RewriteEngine On
     RewriteCond %{HTTPS} off
     RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
@@ -17,6 +20,16 @@ LimitRequestBody 220200960
     SSLCertificateChainFile /etc/apache2/ssl.bundle.crt
   </VirtualHost>
 </IfModule>
+
+Alias /.well-known/acme-challenge/ /data/.well-known/acme-challenge/
+<Directory "/data/.well-known/acme-challenge/">
+    # Options None
+    Options Indexes FollowSymLinks
+    AllowOverride None
+    #ForceType text/plain
+    #RedirectMatch 404 "^(?!/\.well-known/[\w-]{43}$)"
+    Require all granted
+</Directory>
 
 <Directory /var/www/html>
   # Use of .htaccess files exposes a lot of security risk,
