--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,12 +18,13 @@ web:
   # uncomment the 'volumes' section to enable a shared volume with docker-compose
   volumes:
     - ./data:/data:rw
+  hostname: modeldr.co.uk
   environment:
-    - MEDIAWIKI_SITE_SERVER=//35.167.88.243
+    - MEDIAWIKI_SITE_SERVER=//modeldr.co.uk
     - MEDIAWIKI_SITE_NAME=My Awesome Wiki
     - MEDIAWIKI_DB_PASSWORD=password
 
     # uncomment 'MEDIAWIKI_ENABLE_SSL' to enable SSL support
-    # - MEDIAWIKI_ENABLE_SSL=true
+    - MEDIAWIKI_ENABLE_SSL=true
     - MEDIAWIKI_UPDATE=true
     - ENABLE_SMW=true
