--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,11 +22,11 @@ web:
   hostname: modeldr.co.uk
   restart: always
   environment:
-    - MEDIAWIKI_SITE_SERVER=//modeldr.co.uk
+    - MEDIAWIKI_SITE_SERVER=//localhost
     - MEDIAWIKI_SITE_NAME=My Awesome Wiki
     - MEDIAWIKI_DB_PASSWORD=password
 
     # uncomment 'MEDIAWIKI_ENABLE_SSL' to enable SSL support
-    - MEDIAWIKI_ENABLE_SSL=true
+    #- MEDIAWIKI_ENABLE_SSL=true
     - MEDIAWIKI_UPDATE=true
     - ENABLE_SMW=true
